ChangeLog for pommed
--------------------

version 1.23:

version 1.22:
	- pommed: do not probe for LMU controller on pmac machines that do
	not have a backlit keyboard. Avoids a spurious error message.
	- pommed: factor out ADB & LMU write routines, avoids duplicated
	code in the kbd_{lmu,pmu}_backlight_set() routines.
	- gpomme: add japanese translation for gpomme, courtesy of
	Nobuhiro Iwamatsu <iwamatsu@nigauri.org>.
	- pommed: use a common sysfs power class routine in power.c, add
	sysfs power class support for pmac machines.
	- pommed: added partial support for the October 2008 laptops
	(MacBook5,1, MacBookPro5,1, MacBookAir2,1), LCD backlight missing.
	- wmpomme: turn wmpomme into an event-driven dockapp, eliminating
	the fixed update rate (and, thus, wakeups). Thanks to Kalle
	A. Sandström for the prodding.

version 1.21:
	- gpomme: use compositing if available, patch by Soeren Sonnenburg.

version 1.20:
	- pommed: fix array boundary check in check_machine_dmi().
	- pommed: use BUS_BLUETOOTH for the Apple wireless keyboard.

version 1.19:
	- pommed: get rid of the libsmbios dependency on Intel machines.
	- gpomme: integrate config file monitoring and DBus messaging into
	the main loop. Get rid of the 10 times per second polling.
	- pommed: new event loop.
	- pommed: convert power and kbd to timers integrated into the
	event loop.
	- pommed: integrate DBus into the event loop.

version 1.18:
	- pommed: add more IDs for Apple external keyboards
	- pommed: relax event devices identification for internal keyboard.

version 1.17:
	- pommed: handle path change for the applesmc led interface
	starting with kernel 2.6.25.

version 1.16:
	- pommed: add support for the MacBookPro4,1.
	- pommed: add support for the MacBook4,1.
	- pommed: add support for the WellSpring keyboard+trackpad
	assembly ("MultiTouch"), found in the MacBookAir1,1.
	- pommed: add support for the WellSpring II keyboard+trackpad
	assembly ("MultiTouch"), most likely found in the MacBookPro4,1.